refactor: repository structure